fixed misalign

--- a/css/paths_css.css
+++ b/css/paths_css.css
@@ -26,6 +26,7 @@ header{
 #balance{
   margin-right: 7px;
   height: 50px;
+  vertical-align: middle;
 }
 #avatar{
    border: 2px solid #EDE1DA;
